# stratus-actions

./: .gitignore  LICENSE  README.md  gitt.diff
.github/: dependabot.yml  release.yml
.github/actions/hello-world/: README.md  action.yml  entrypoint.sh
.github/actions/release/: README.md  action.yml
.github/workflows/: ai-release.yml  docker-build.yml  pr-draft-release.yml  pre-merge-version.yml  publish-release.yml  reusable-draft-release.yml  simple-release.yml  sync-from-upstream.yml  test-actions.yml
build-scope-analyzer/: .dockerignore  Dockerfile  README.md  action.yml  build_scope_analyzer.py  example-outputs.md  example-workflow.yml  main.py  pyproject.toml  requirements.txt  setup_test_env.sh  test.sh  test_build_scope_analyzer.py
build-scope-analyzer/.github/workflows/: build-and-publish.yml
hello-world/: README.md  action.yml  entrypoint.sh
hello-world-docker/: Dockerfile  README.md  action.yml  entrypoint.sh
release/: README.md  action.yml
scripts/: cleanup-ghcr-tags.sh
